# cpppath

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  cpppath.pc.in  cpppathConfig.cmake  cpppathConfig.cmake.in  environment.yaml
.github/workflows/: ci.yml
include/: cpppath.h
src/: CMakeLists.txt  cpppath.h  cpppath.pc.in  cpppathConfig.cmake.in
src/cpppath/: cpppath.cpp  cpppath.h
test/: CMakeLists.txt  main.cpp
